# VulkanEngine

./: .gitignore  .tags  CMakeLists.txt  CopyFile.cmake  NOTES.md  README.md  compile.sh  compileshaders.sh  run.sh  setup-project.sh  workspace.code-workspace
lib/GLFW/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/GLFW/src/: Makefile  cmake_install.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/lodepng/: lodepng.cpp  lodepng.h
lib/stb/: stb_image.h
shaders/: mandelbrot.comp  octree.comp  raycasting.comp  raycasting.comp.bak  raymarching.comp  raytracing.comp  shader.frag  shader.vert
src/: Game.cpp  Game.h  RenderManager.cpp  RenderManager.h  app.cpp  app.hpp  legacy.hpp  main.cpp
src/core/: Camera.h  Game.h  camera.h  entity.h  game.cpp  game.hpp
src/core/engine/: compute_manager.h  game_entity.h  gui.h  octree.h
src/core/game/: game_entity.h  graph.h  octree.h  world.h
src/core/graphics/: compute_pipeline.h  move_pipeline.h  octree_pipeline.h  raymarch_pipeline.h  render_manager.h  render_pipeline.h  renderable.h  screen_pipeline.h  texture_pipeline.h
src/game/: Entity.cpp  Entity.h  Game.h
src/graphics/: Vulkan.cpp  Vulkan.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializers.h  VulkanRenderable.h  VulkanSwapChain.cpp  VulkanSwapChain.h  Window.cpp  Window.h  vks_device.cpp  vks_device.h  vks_framebuffer.cpp  vks_model.cpp  vks_model.h  vks_pipeline.cpp  vks_pipeline.h  vks_swap_chain.cpp  vks_swap_chain.h  vks_window.cpp  vks_window.h
src/imgui/: imgui.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/shaders/: CMakeLists.txt  compile.sh  frag.spv  shader.frag  shader.vert  vert.spv
src/vks/: VulkanInitializers.h  vks_device.cpp  vks_device.h  vks_framebuffer.h  vks_input.cpp  vks_input.h  vks_model.cpp  vks_model.h  vks_pipeline.cpp  vks_pipeline.h  vks_swap_chain.cpp  vks_swap_chain.h  vks_texture.cpp  vks_texture.h  vks_util.h  vks_window.h
test/vks/: vks_camera.cpp
